maint: Configure dependencies.
Use dependencies field in package.json to install all development dependencies.
This way, when another package depends on it via ``devDependencies``,
all dependencies will be installed.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Development base files for working with Patternslib and add-ons.",
     "license": "MIT",
-    "devDependencies": {
+    "dependencies": {
         "@babel/core": "^7.18.5",
         "@babel/eslint-parser": "^7.18.2",
         "@babel/preset-env": "^7.18.2",
