--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "@babel/preset-env": "^7.18.2",
         "@commitlint/cli": "^17.0.2",
         "@commitlint/config-conventional": "^17.0.2",
-        "@patternslib/patternslib": "^9.0.0-alpha.0",
         "@release-it/conventional-changelog": "^5.0.0",
         "babel-loader": "^8.2.5",
         "core-js": "3.23.1",
@@ -36,6 +35,9 @@
         "webpack-dev-server": "^4.9.2",
         "whybundled": "^2.0.0",
         "yarn": "^1.22.19"
+    },
+    "peerDependencies": {
+        "@patternslib/patternslib": "*"
     },
     "scripts": {
         "test": "jest"
