maint: Add jquery and @patternslib/patternslib to devDependencies, so that setup_tests.js does not fail when testing this package.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "peerDependencies": {
         "@patternslib/patternslib": "*"
     },
+    "devDependencies": {
+        "@patternslib/patternslib": "*",
+        "jquery": "^3.6.0"
+    },
     "scripts": {
         "test": "jest"
     },
