--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "release-it": "^15.5.0",
         "sass": "^1.55.0",
         "sass-loader": "^13.1.0",
+        "semver": "^7.3.8",
         "style-loader": "^3.3.0",
         "terser-webpack-plugin": "^5.3.6",
         "timezone-mock": "^1.3.4",
