--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
         "whybundled": "^2.0.0",
         "yarn": "^1.22.19"
     },
+    "engines": {
+        "node": ">=16"
+    },
     "scripts": {
         "test": "jest"
     },
