--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@commitlint/cli": "^19.6.1",
         "@commitlint/config-conventional": "^19.6.0",
         "@release-it/conventional-changelog": "^9.0.3",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.0",
         "babel-loader": "^9.2.1",
         "css-loader": "^7.1.2",
         "eslint": "^9.17.0",
