--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "css-loader": "^7.1.2",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
-        "husky": "^8.0.3",
+        "husky": "^9.1.7",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
@@ -38,6 +38,7 @@
         "node": ">=18.18"
     },
     "scripts": {
+        "postinstall": "npx husky",
         "test": "jest"
     },
     "author": {
