--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
         "@release-it/conventional-changelog": "^10.0.0",
         "babel-loader": "^9.2.1",
         "css-loader": "^7.1.2",
-        "eslint": "^8.57.0",
-        "eslint-config-prettier": "^9.1.0",
+        "eslint": "^9.20.1",
+        "eslint-config-prettier": "^10.0.1",
+        "globals": "^15.15.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
