maint: Add postinstall script to upgrade dev.
Note: the "make upgrade" target is run in the directory where npm
install is invoked. If you install "@patternslib/dev" as a dependency in
"@pattersnlib/patternslib", the Patternslib project is upgraded.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "node": ">=18.18"
     },
     "scripts": {
+        "postinstall": "cd $INIT_CWD && make upgrade",
         "test": "jest"
     },
     "author": {
