fix: Fix postinstall when no make upgrade is available.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "node": ">=18.18"
     },
     "scripts": {
-        "postinstall": "cd $INIT_CWD && make upgrade",
+        "postinstall": "cd $INIT_CWD && make upgrade || true",
         "test": "jest"
     },
     "author": {
