--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
         "whybundled": "^2.0.0",
         "yarn": "^1.22.22"
     },
+    "resolutions": {
+        "conventional-changelog-conventionalcommits": "^8.0.0"
+    },
     "engines": {
         "node": ">=18.18"
     },
