--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@commitlint/config-conventional": "^19.8.0",
         "@release-it/conventional-changelog": "^8.0.2",
         "babel-loader": "^10.0.0",
+        "caniuse-lite": "*",
         "css-loader": "^7.1.2",
         "eslint": "^9.26.0",
         "eslint-config-prettier": "^10.1.3",
