--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@patternslib/dev",
-    "version": "3.8.1",
+    "version": "3.9.0-alpha.0",
     "description": "Development base files for working with Patternslib and add-ons.",
     "license": "MIT",
     "dependencies": {
