--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
     "description": "Development base files for working with Patternslib and add-ons.",
     "license": "MIT",
     "dependencies": {
-        "@babel/core": "^7.28.4",
-        "@babel/eslint-parser": "^7.28.4",
-        "@babel/preset-env": "^7.28.3",
+        "@babel/core": "^7.28.5",
+        "@babel/eslint-parser": "^7.28.5",
+        "@babel/preset-env": "^7.28.5",
         "@commitlint/cli": "^19.8.0",
         "@commitlint/config-conventional": "^19.8.0",
         "@release-it/conventional-changelog": "^8.0.2",
         "babel-loader": "^10.0.0",
-        "caniuse-lite": "*",
+        "caniuse-lite": "1.0.30001760",
         "css-loader": "^7.1.2",
-        "eslint": "^9.36.0",
+        "eslint": "^9.39.2",
         "eslint-config-prettier": "^10.1.8",
-        "globals": "^16.4.0",
+        "globals": "^16.5.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^30.1.3",
-        "jest-environment-jsdom": "^30.1.2",
+        "jest": "^30.2.0",
+        "jest-environment-jsdom": "^30.2.0",
         "jest-watch-typeahead": "^3.0.1",
-        "prettier": "^3.6.2",
+        "prettier": "^3.7.4",
         "regenerator-runtime": "^0.14.1",
-        "release-it": "^19.0.5",
-        "sass": "^1.93.0",
-        "sass-loader": "^16.0.5",
+        "release-it": "^19.1.0",
+        "sass": "^1.97.0",
+        "sass-loader": "^16.0.6",
         "style-loader": "^4.0.0",
-        "terser-webpack-plugin": "^5.3.14",
+        "terser-webpack-plugin": "^5.3.16",
         "timezone-mock": "^1.3.6",
-        "webpack": "^5.101.3",
-        "webpack-bundle-analyzer": "^4.10.2",
+        "webpack": "^5.104.0",
+        "webpack-bundle-analyzer": "^5.1.0",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.2",
         "whybundled": "^2.0.0",
